--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -78,7 +78,7 @@
       font-weight: bold;
       color: #fff;
       text-decoration: none;
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: #f51414b0;
       border-radius: rem(5px);
       padding: rem(10px) rem(15px);
       transition: all 0.3s;
@@ -88,7 +88,7 @@
       }
 
       &:hover {
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: #f16161f3;
         box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.2);
       }
 
