--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin mainFont($weight: 700) {
-  font-family: "Titillium Web", "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "bebas neueregular", sans-serif;
   font-weight: $weight;
   font-style: normal;
   color: #e6e6e6;
